# local-music-player

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/app/: app.rs
src/audio/: album.rs  mod.rs  playback.rs  player.rs  ui.rs
src/info/: ui.rs
src/load/: loader.rs  mod.rs  ui.rs
src/lyric/: line.rs  lyric.rs  mod.rs
src/manager/: command.rs  dispatch.rs  mod.rs
src/util/: instance.rs
ui/: app-window.slint  app.slint  config.slint  content-line.slint  content-title.slint  content.slint  global.slint  info.slint  item-content.slint  item-panel.slint  item-title.slint  items.slint  lyric.slint  menu.slint  panel.slint  path.slint  type.slint
